@@ -33,6 +33,7 @@ lib/dpkg/pkg-spec.c
 lib/dpkg/progress.c
 lib/dpkg/report.c
 lib/dpkg/string.c
+lib/dpkg/strwide.c
 lib/dpkg/subproc.c
 lib/dpkg/tarfn.c
 lib/dpkg/trigdeferred.l
