@@ -37,6 +37,9 @@ dpkg (1.17.2) UNRELEASED; urgency=low
     Regression introduced in 1.17.0. Closes: #725437
   * Activate file triggers on disappearance more accurately, only when we know
     we are inevitably removing things.
+  * Fix «dpkg-query --list» output when using multibyte character strings,
+    to avoid unaligned columns and mojibake. Closes: #257505, #718541
+    Based on a patch by Changwoo Ryu <cwryu@debian.org>.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
